log
jue., 16 de mar. de 2023 22:07:06: 
 tests:  0|7
total_score: 0/70
2f2b6f1
jue., 16 de mar. de 2023 22:09:14: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b784c2b
jue., 16 de mar. de 2023 22:11:30: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0cd20eb
jue., 16 de mar. de 2023 22:13:38: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
16ea592
jue., 16 de mar. de 2023 22:14:39: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'arrayMaxMin':
exercises.c:28:4: error: implicit declaration of function 'print' [-Werror=implicit-function-declaration]
    print(a[0]);
    ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
aadbd3c
jue., 16 de mar. de 2023 22:14:53: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
29bac72
jue., 16 de mar. de 2023 22:15:53: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
32e9f89
jue., 16 de mar. de 2023 22:17:00: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
334516a
jue., 16 de mar. de 2023 22:18:37: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 30/70
6cd069e
jue., 16 de mar. de 2023 22:20:52: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 30/70
78fe561
jue., 16 de mar. de 2023 22:21:14: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
1b691d2
jue., 16 de mar. de 2023 22:21:50: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
2b4d020
jue., 16 de mar. de 2023 22:22:50: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
029e7f7
jue., 16 de mar. de 2023 22:24:05: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
9027af9
jue., 16 de mar. de 2023 22:27:56: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaV2':
exercises.c:124:12: error: 'c' redeclared as different kind of symbol
    Vector *c = crearVector(2);
            ^
exercises.c:121:53: note: previous definition of 'c' was here
 void sumaV2(int a1, int a2, int b1, int b2, Vector *c) {
                                                     ^
Compilation failed
2ccd4e0
jue., 16 de mar. de 2023 22:28:11: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 60/70
e27204c
